fix: use ProcessBuilder instead of Runtime.exec to fix command injection (semgrep finding)